css/style.css
/* ... */
    
    /* The slices in the Slider */
    .nivo-slice {
        display:block;
        position:absolute;
        z-index:50;
        height:100%;
    }
    
    /* Caption styles */
    .nivo-caption {
        position:absolute;
        left:0px;
        bottom:40px;
        background:#000;
        color:#fff;
        opacity:0.7; /* Overridden by captionOpacity setting */
        width:440px;
        z-index:89;
    }
    
    .nivo-caption p {
        padding:15px;
        margin:0;
    }
    
    .nivo-caption a {
        display:inline !important;
    }
    
    .nivo-html-caption {
        display:none;
    }
    
    .nivo-title{
        color:#fff;
        display:block !important;
        font-size:14px;
    }
    
    .nivo-title a{
        text-decoration:none;
        color:#fff !important;
        display:block !important;
    }
        
    /* Direction nav styles (e.g. Next & Prev) */
    .nivo-directionNav a {
        position:absolute;
        top:45%;
        z-index:99;
        cursor:pointer;
    }
    .nivo-prevNav {
        left:0px;
    }
    
    .nivo-nextNav {
        right:0px;
    }
    
    /* Control nav styles (e.g. 1,2,3...) */
    .nivo-controlNav a {
        position:relative;
        z-index:99;
        cursor:pointer;
    }


/* Accordion Slider - Kwicks -http://www.jeremymartin.name/projects.php?project=kwicks */    

    /* Slider Height */    
    .accordion_slider#slider, .accordion_slider#slider_area{
        height:450px !important;
        border-bottom:1px solid #fff;
    }
    
    .kwicks {
        /* recommended styles for kwicks ul container */
        list-style: none;
        position: relative;
        margin: 0;
        padding: 0;
    }
    
    .kwicks li{
        /* these are required, but the values are up to you (must be pixel) */ 
        height:450px;
        
        /*do not change these */
        display: block;
        overflow: hidden;
        padding: 0;  /* if you need padding, do so with an inner div (or implement your own box-model hack) */
    }
    
    .kwicks.horizontal li {
        /* This is optional and will be disregarded by the script.  However, it should be provided for non-JS enabled browsers. */
        margin-right: 5px; /*Set to same as spacing option. */	
        float: left;
    } 
    
    .kwicks li .shadow{
        position:absolute;
        z-index:999;
        top:0;
        height:450px !important;
        width:30px;	
        background:url(../images/slider_shadow.png) left repeat-y;
        border-left:1px solid #fff;
    }
    
    .kwicks li.kwicks_first .shadow{
        border-left:0px solid #fff;
    }
    
    .kwicks li img{ 
        z-index:999;
        top:0;
        left:500px;
        
        width:auto; 
    }
    
    .kwicks .desc_accordion{
        position:absolute;
        bottom:20px;
        background:url(../images/desc_background.png);
        padding:20px; 
    }
    
    .kwicks li .desc_accordion .title{
        font-size:16px;
        color:#fff;
    }
    
    .kwicks li .desc_accordion .title a, .kwicks li.active .desc_accordion .title,.kwicks li .desc_accordion .title_hidden a, .kwicks li.active .desc_accordion .title_hidden{
        color:#fff;
        text-decoration:none;
    }
    
    .kwicks li .desc_accordion .title_hidden{
        font-size:24px !important;
        clear:both;
        display:block;
        padding:0 10px;
    }
    
    .kwicks li .desc_accordion .subtitle, .kwicks li .desc_accordion p{
        visibility:hidden;
        display:none;
        color:#fff;
        padding:10px;
        margin:10px 0 0 0!important;
    }
    
    .kwicks li.active .desc_accordion{
        width:200px;
    }

    .kwicks li.active .desc_accordion a{
        color:#fff;
    }    
    
    .kwicks li .desc_accordion .subtitle{
        font-size:16px;
        background:url(../images/desc_background.png);
        width:auto;
    }
    
    .kwicks li.active .desc_accordion {
        position:absolute;
        top:100px;
        right:20px;
        background:url(../images/desc_background.png);
    } 
    
    .kwicks li.active .desc_accordion .subtitle, .kwicks li.active .desc_accordion p{
        visibility: visible;
        display:block;
    }
    
    .kwicks li.active .desc_accordion p{
        padding:0 10px !important;
        margin:10px 0 0 0!important;
    }
    
    .kwicks li .desc_accordion .title{
        visibility: visible;
        display:block;
    }
    
    .kwicks li.active .desc_accordion .title{
        visibility: hidden;
        display:none;
    }
    
    .kwicks li .desc_accordion .title_hidden{
        visibility: hidden;
        display:none;
    }
    
    .kwicks li.active .desc_accordion .title_hidden{
        visibility: visible;
        display:block;
    }	
	
	.fb_iframe_widget iframe {
       
	}
/* nav_sp */  
.nav_sp {
  display: none;
}
.sns_carter {
  display: block;
}
.map_carter {
  display: none;
}
.twitter-button a {
    display: inline-block;
}
.social-button li {
    display: inline;
}.social-button a:hover {
    opacity: 0.7;
}
.fb_iframe_widget iframe {
    bottom: 5px;
}
.comment-reply-title {
    font-size: 18px;
}
ul.sub-menu .sub-menu {
    top: 0px!important;
    left: 185px;
}
.featured-page {
    margin: 0 70px 20px 70px;
}
.intro-video {
    font-size: 16px;
    line-height: 20px;
    font-weight: bold;
}

